dfir_rs/tests/compile-fail-stable/surface_demuxenum_port_missing.stderr
error[E0277]: the trait bound `Shape: DemuxEnumSink<(Pin<&mut impl dfir_rs::futures::Sink<_, Error = Infallible>>, Pin<&mut impl dfir_rs::futures::Sink<_, Error = Infallible>>)>` is not satisfied
  --> tests/compile-fail-stable/surface_demuxenum_port_missing.rs:17:15
   |
17 |         ]) -> demux_enum::<Shape>();
   |               ^^^^^^^^^^ unsatisfied trait bound
   |
   = note: ensure there is exactly one output for each enum variant.
   = note: ensure that the type for each output is a tuple of the field for the variant: `()`, `(a,)`, or `(a, b, ...)`.
   = help: the trait `DemuxEnumSink<(Pin<&mut impl dfir_rs::futures::Sink<_, Error = Infallible>>, Pin<&mut impl dfir_rs::futures::Sink<_, Error = Infallible>>)>` is not implemented for `Shape`
           but trait `DemuxEnumSink<(Pin<&mut _>, Pin<&mut _>, Pin<&mut _>)>` is implemented for it
note: required by a bound in `main::{closure#1}::{closure#0}::op_2v1__demux_enum__loc_nopath_17_14_17_24`
  --> tests/compile-fail-stable/surface_demuxenum_port_missing.rs:17:15
   |
17 |         ]) -> demux_enum::<Shape>();
   |               ^^^^^^^^^^ required by this bound in `op_2v1__demux_enum__loc_nopath_17_14_17_24`
